feat(quotation):  build a quotation flow